--- a/app/css/appapi.css
+++ b/app/css/appapi.css
@@ -10,39 +10,70 @@
 
 .APIList {
 	box-sizing: border-box;
-	width: 25%;
+	width: 35%;
 	float: left;
 	margin: 0px;
+	height: 50vh;
+	overflow-y: auto;
+	border: 1px solid #efefef;
+	border-radius: 4px;
 }
 
 .APIListItem {
+	box-sizing: border-box;
+	margin:1px 0px 1px 0px;
 	width:100%;
-	padding:4px;
-	background-color:#ffffff;
+	padding:8px;
+	cursor:pointer;	
+	color:#4f4f4f;
+	border-bottom:1px dotted #afafaf;
+}
+
+.APIListItemId {
 	cursor:pointer;	
 	color:#4f4faf;
 }
 
+
 .APIItem {
 	box-sizing: border-box;
-	width: 75%;
+	width: 65%;
 	float: left;
 	margin: 0px;
 	padding:4px 4px 4px 24px;
 }
 
-.APIItemName {
-	border-bottom: 1px solid #afafaf;
-	color: #5f5f5f;
+.APIItemId {
+	color: #2f2f2f;
 	font-size: 110%;
 	font-weight: bold;
 	padding: 4px 4px 4px 0px;
+	border-bottom: 1px solid #afafaf;
 }
+
+.APIItemTitle {
+	color: #5f5f5f;
+	font-size: 110%;
+	font-weight: bold;
+	padding: 4px 4px 14px 0px;
+}
+
 
 .APIItemDescription {
 	color: #5f5f5f;
 	font-style: italic;
 	padding: 4px 4px 14px 0px;
+}
+
+
+.APIItemSampleRequest {
+	color: #5f5f5f;
+	font-style: normal;
+	padding: 4px;
+	border: 1px solid #afafaf;
+	border-radius: 4px;
+	background-color: #efefef;
+	cursor: pointer;
 }
 
 
